<resources>
    <string name="app_name">RowingWeights</string>
    <string name="tab_log">Log Weight</string>
    <string name="tab_history">History</string>
    <string name="hint_weight">Enter weight (e.g., 75.55)</string>
    <string name="btn_log_weight">Log Weight</string>
    <string name="title_weight_history">Weight History</string>
    <string name="btn_1w">1W</string>
    <string name="btn_1m">1M</string>
    <string name="btn_1y">1Y</string>
    <string name="btn_all">ALL</string>
    <string name="btn_delete">Delete</string>
</resources>